--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -20,29 +20,30 @@
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <!--<fieldset>-->
-                        <label class="input-label">Busca</label>
-                        <!--<label class="input-label">Sua moeda</label>-->
-                        <select name="" class="contactField" id="SUA_MOEDA"></select>
-                        <!--<label class="input-label">Qual procura?</label>-->
-                        <!--<select name="" class="contactField" id="MOEDA_PROCURA"></select>-->
-                        <!--<label class="input-label">Qual é a transação?</label>-->
-                        <select name="" class="contactField" id="TRANSACAO"></select>
-                    <!--</fieldset>-->
-                </div>
+                    <div class='one-half'>
+                        <fieldset>
+                            <label class="input-label">Busca</label>
+                            <!--<label class="input-label">Sua moeda</label>-->
+                            <select name="" class="contactField" id="SUA_MOEDA"></select>
+                            <!--<label class="input-label">Qual procura?</label>-->
+                            <!--<select name="" class="contactField" id="MOEDA_PROCURA"></select>-->
+                            <!--<label class="input-label">Qual é a transação?</label>-->
+                            <select name="" class="contactField" id="TRANSACAO"></select>
+                        </fieldset>
+                    </div>
             </div>
         </div>
-        <br />
-        <br />
-            <div class="content">
+            </div>
+        <div class="content">
                 <div class="container no-bottom">
                     <div class="no-bottom">
-                        <!--<fieldset>-->
-                            <div id="DIVESTABELECIMENTO">
+                        <div class='one-half'>
+                            <fieldset>
+                                <div id="DIVESTABELECIMENTO">
 
-                            </div>
-                        <!--</fieldset>-->
-                    </div>
+                                </div>
+                            </fieldset>
+                        </div>
                 </div>
             </div>
       
@@ -51,6 +52,7 @@
         <script src="scripts/paginas/estabelecimento.js"></script>
         
     </div>
+        </div>
 </body>
 
 </html>
