--- a/www/estabelecimentomoeda.html
+++ b/www/estabelecimentomoeda.html
@@ -20,8 +20,9 @@
         <div class="content" id="MOEDAS">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div>
+                    <div class='one-half'>
                         <fieldset>
+                            <label class="input-label">Configurações</label>
                             <select name="" class="contactField" id="ESTABELECIMENTO" onchange="PreencheMoedasTrabalhadas(jQuery('#ESTABELECIMENTO').val())"></select>
                             <!--<label class="input-label">Moedas trabalhadas</label>-->
                             <select name="" class="contactField" id="MOEDA"></select>
@@ -40,30 +41,16 @@
                     <img src="images/Location_Navigation_Money_Finance_Bank_Cash_Dollar_Pin-512.png" width="24px" height="24px" />
                 </a>-->
             </div>
-            <!--<div id='MOEDAS_TRABALHADAS'>
-            </div>-->
-            <div class="container no-bottom">
-                <div class="no-bottom">
-                    <div>
-                        <fieldset>
-                            <div id='MOEDAS_TRABALHADAS'>
-                            </div>
-                        </fieldset>
-                    </div>
-                </div>
-
-            </div>
-          
         </div>
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <!--<fieldset>-->
-                    <div id="DIVESTABELECIMENTO">
-
+                    <div class='one-half'>
+                        <fieldset>
+                            <div id="DIVESTABELECIMENTO">
+                            </div>
+                        </fieldset>
                     </div>
-                    <!--</fieldset>-->
-                </div>
             </div>
         </div>
 
