--- a/www/novoestabelecimento.html
+++ b/www/novoestabelecimento.html
@@ -19,10 +19,10 @@
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div>
+                    <div class='one-half'>
                         <fieldset>
                             <label class="input-label">Cadastro de Estabelecimentos</label>
-                            <input type="text" name="contactNameField" value="" class="contactField"  id="NOME" placeholder="Nome fantasia" required />
+                            <input type="text" name="contactNameField" value="" class="contactField" id="NOME" placeholder="Nome fantasia" required />
                             <input type="text" name="contactNameField" value="" class="contactField " id="RAZAO_SOCIAL" placeholder="Razão Social" required />
                             <input type="text" name="contactNameField" value="" class="contactField " id="EMAIL" placeholder="E-mail" required />
                             <input type="text" name="contactNameField" value="" class="contactField " id="FONE" placeholder="Telefone" required />
@@ -33,7 +33,7 @@
                             <input type="text" name="contactNameField" value="" class="contactField " id="CIDADE" placeholder="Cidade" required />
                             <input type="text" name="contactNameField" value="" class="contactField " id="UF" placeholder="UF" required />
                             <input type="text" name="contactNameField" value="" class="contactField " id="CNPJ" placeholder="CNPJ" required />
-                           <input type="email" name="contactNameField" value=""class="contactField "  id="CEP" placeholder="CEP" required />
+                            <input type="email" name="contactNameField" value="" class="contactField " id="CEP" placeholder="CEP" required />
                         </fieldset>
                     </div>
                 </div>
