--- a/www/pefilestabelecimento.html
+++ b/www/pefilestabelecimento.html
@@ -19,11 +19,11 @@
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div>
-                        <!--<fieldset>-->
-                            <label class="input-label">Perfil Estabelecimento</label>
-                            <select name="ESTABELECIMENTO" class="contactField" id="ESTABELECIMENTO" onchange="RetornaEstabelecimento(jQuery('#ESTABELECIMENTO').val())"></select>
-                        <!--</fieldset>-->
+                    <div class='one-half'>
+                        <fieldset>
+                        <label class="input-label">Perfil Estabelecimento</label>
+                        <select name="ESTABELECIMENTO" class="contactField" id="ESTABELECIMENTO" onchange="RetornaEstabelecimento(jQuery('#ESTABELECIMENTO').val())"></select>
+                        </fieldset>
                     </div>
                 </div>
             </div>
@@ -31,7 +31,7 @@
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div>
+                    <div class='one-half'>
                         <fieldset>
                             <label class="input-label">Cadastro de Estabelecimentos</label>
                             <input type="text" name="NOME" value="" class="contactField" id="NOME" placeholder="Nome fantasia" required />
@@ -54,12 +54,12 @@
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div>
-                        <!--<fieldset>-->
-                            <label class="input-label">Localização</label>
-                            <input type="text" name="contactNameField" value="" class="contactField " id="LATITUDE" placeholder="Latitude" required readonly />
-                            <input type="text" name="contactNameField" value="" class="contactField " id="LONGITUDE" placeholder="Longitude" required readonly />
-                        <!--</fieldset>-->
+                    <div class='one-half'>
+                        <fieldset>
+                        <label class="input-label">Localização</label>
+                        <input type="text" name="contactNameField" value="" class="contactField " id="LATITUDE" placeholder="Latitude" required readonly />
+                        <input type="text" name="contactNameField" value="" class="contactField " id="LONGITUDE" placeholder="Longitude" required readonly />
+                       </fieldset>
                     </div>
                 </div>
                 <a onclick="RecuperaGeolocalizacao();" class="button button-white">
