--- a/www/perfil.html
+++ b/www/perfil.html
@@ -20,23 +20,16 @@
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div>
+                    <div class='one-half'>
                         <fieldset>
                             <label class="input-label">Meus dados</label>
-
                             <input type="text" name="contactNameField" value="" class="contactField" id="NOME" placeholder="Seu nome" required readonly="readonly" />
-
                             <input type="email" name="contactNameField" value="" class="contactField  " id="EMAIL" placeholder="E-mail" required readonly="readonly" />
-
                             <input type="email" name="contactNameField" value="" class="contactField  " id="DATA_CADASTRO" placeholder="Data de Cadastro" required readonly="readonly" />
-
                             <input type="password" name="contactNameField" value="" class="contactField" id="SENHA" placeholder="Senha" required />
-
                             <input type="password" name="contactNameField" value="" class="contactField" id="CONFIRMA_SENHA" placeholder="Confirme sua senha" required />
-
                             <!--<label class="input-label">Moeda base</label>
-                            <select name="" class="contactField" id="SUA_MOEDA"></select>-->
-
+            <select name="" class="contactField" id="SUA_MOEDA"></select>-->
                         </fieldset>
                     </div>
                 </div>
