--- a/www/estabelecimentomoeda.html
+++ b/www/estabelecimentomoeda.html
@@ -20,7 +20,7 @@
         <div class="content" id="MOEDAS">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div class='one-half'>
+                    <div >
                         <fieldset>
                             <label class="input-label">Configurações</label>
                             <select name="" class="contactField" id="ESTABELECIMENTO" onchange="PreencheMoedasTrabalhadas(jQuery('#ESTABELECIMENTO').val())"></select>
@@ -45,7 +45,7 @@
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div class='one-half'>
+                    <div >
                         <fieldset>
                             <div id="DIVESTABELECIMENTO">
                             </div>
