--- a/www/novoestabelecimento.html
+++ b/www/novoestabelecimento.html
@@ -19,7 +19,7 @@
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div class='one-half'>
+                    <div >
                         <fieldset>
                             <label class="input-label">Cadastro de Estabelecimentos</label>
                             <input type="text" name="contactNameField" value="" class="contactField" id="NOME" placeholder="Nome fantasia" required />
