--- a/www/pefilestabelecimento.html
+++ b/www/pefilestabelecimento.html
@@ -19,7 +19,7 @@
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div class='one-half'>
+                    <div >
                         <fieldset>
                         <label class="input-label">Perfil Estabelecimento</label>
                         <select name="ESTABELECIMENTO" class="contactField" id="ESTABELECIMENTO" onchange="RetornaEstabelecimento(jQuery('#ESTABELECIMENTO').val())"></select>
@@ -31,7 +31,7 @@
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div class='one-half'>
+                    <div >
                         <fieldset>
                             <label class="input-label">Cadastro de Estabelecimentos</label>
                             <input type="text" name="NOME" value="" class="contactField" id="NOME" placeholder="Nome fantasia" required />
@@ -54,7 +54,7 @@
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div class='one-half'>
+                    <div >
                         <fieldset>
                         <label class="input-label">Localização</label>
                         <input type="text" name="contactNameField" value="" class="contactField " id="LATITUDE" placeholder="Latitude" required readonly />
