--- a/www/perfil.html
+++ b/www/perfil.html
@@ -20,7 +20,7 @@
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div class='one-half'>
+                    <div >
                         <fieldset>
                             <label class="input-label">Meus dados</label>
                             <input type="text" name="contactNameField" value="" class="contactField" id="NOME" placeholder="Seu nome" required readonly="readonly" />
