--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -20,7 +20,7 @@
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div class='one-half'>
+                    <div >
                         <fieldset>
                             <label class="input-label">Busca</label>
                             <!--<label class="input-label">Sua moeda</label>-->
@@ -37,7 +37,7 @@
         <div class="content">
                 <div class="container no-bottom">
                     <div class="no-bottom">
-                        <div class='one-half'>
+                        <div >
                             <fieldset>
                                 <div id="DIVESTABELECIMENTO">
 
