--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -14,7 +14,7 @@
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a onclick="BuscarEstabelecimento(1);"><i class="fa fa-search"></i></a>
+            <a onclick="BuscarEstabelecimento();"><i class="fa fa-search"></i></a>
         </div>
         <div class="header-clear-small"></div>
         <div class="content">
@@ -28,7 +28,7 @@
                             <!--<label class="input-label">Qual procura?</label>-->
                             <!--<select name="" class="contactField" id="MOEDA_PROCURA"></select>-->
                             <!--<label class="input-label">Qual é a transação?</label>-->
-                            <select name="" class="contactField" id="TRANSACAO"></select>
+                            <!--<select name="" class="contactField" id="TRANSACAO"></select>-->
                         </fieldset>
                     </div>
             </div>
