--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -24,7 +24,7 @@
                         <fieldset>
                             <label class="input-label">Busca</label>
                             <!--<label class="input-label">Sua moeda</label>-->
-                            <select name="" class="contactField" id="SUA_MOEDA"></select>
+                            <select name="" class="contactField" id="SUA_MOEDA" onchange="BuscarEstabelecimento();"></select>
                             <!--<label class="input-label">Qual procura?</label>-->
                             <!--<select name="" class="contactField" id="MOEDA_PROCURA"></select>-->
                             <!--<label class="input-label">Qual é a transação?</label>-->
@@ -47,8 +47,8 @@
                 </div>
             </div>
       
-        <script src="scripts/jsmodel/moedas.js"></script>
-        <script src="scripts/jsmodel/transacao.js"></script>
+        <!--<script src="scripts/jsmodel/moedas.js"></script>
+        <script src="scripts/jsmodel/transacao.js"></script>-->
         <script src="scripts/paginas/estabelecimento.js"></script>
         
     </div>
