--- a/www/index.html
+++ b/www/index.html
@@ -33,12 +33,12 @@
     <script type="text/javascript" src="scripts/paginas/index.js"></script>
 </head>
 <body>
-    <div id="preloader">
-        <div id="status">
+    <div id="preloader" style="display:block;">
+        <div id="status" style="display:block;">
             <!--<p class="center-text">
-                Carregando...
-                <em>O carregamento depende da sua conexão!</em>
-            </p>-->
+            Carregando...
+            <em>O carregamento depende da sua conexão!</em>
+        </p>-->
         </div>
     </div>
     <div id="content">
