--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿
 <html>
 
 <head>
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
-
+    <!DOCTYPE html>
 </head>
 <body>
     <div id="content" class="page-content">
@@ -20,7 +20,7 @@
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
-                    <div >
+                    <div>
                         <fieldset>
                             <label class="input-label">Busca</label>
                             <!--<label class="input-label">Sua moeda</label>-->
@@ -31,28 +31,28 @@
                             <!--<select name="" class="contactField" id="TRANSACAO"></select>-->
                         </fieldset>
                     </div>
-            </div>
-        </div>
-            </div>
-        <div class="content">
-                <div class="container no-bottom">
-                    <div class="no-bottom">
-                        <div >
-                            <fieldset>
-                                <div id="DIVESTABELECIMENTO">
-
-                                </div>
-                            </fieldset>
-                        </div>
                 </div>
             </div>
-      
-        <!--<script src="scripts/jsmodel/moedas.js"></script>
-        <script src="scripts/jsmodel/transacao.js"></script>-->
-        <script src="scripts/paginas/estabelecimento.js"></script>
-        
-    </div>
         </div>
+        <div class="content">
+            <div class="container no-bottom">
+                <div class="no-bottom">
+                    <div>
+                        <fieldset>
+                            <div id="DIVESTABELECIMENTO">
+
+                            </div>
+                        </fieldset>
+                    </div>
+                </div>
+            </div>
+
+            <!--<script src="scripts/jsmodel/moedas.js"></script>
+            <script src="scripts/jsmodel/transacao.js"></script>-->
+            <script src="scripts/paginas/estabelecimento.js"></script>
+
+        </div>
+    </div>
 </body>
 
 </html>
