--- a/www/avaliacao.html
+++ b/www/avaliacao.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
 </head>
+
 <body>
     <div id="content" class="page-content">
         <div class="header">
@@ -15,23 +16,23 @@
             <a onclick="BuscarEstabelecimento();"><i class="fa fa-search"></i></a>
         </div>
         <div class="header-clear-small"></div>
-        <div class="content">
+        <!--<div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
                     <div>
                         <fieldset>
                             <label class="input-label">Busca</label>
-                            <!--<label class="input-label">Sua moeda</label>-->
+                            <!--<label class="input-label">Sua moeda</label>
                             <select name="" class="contactField" id="SUA_MOEDA" onchange="BuscarEstabelecimento();"></select>
                             <!--<label class="input-label">Qual procura?</label>-->
-                            <!--<select name="" class="contactField" id="MOEDA_PROCURA"></select>-->
-                            <!--<label class="input-label">Qual é a transação?</label>-->
-                            <!--<select name="" class="contactField" id="TRANSACAO"></select>-->
+                            <!--<select name="" class="contactField" id="MOEDA_PROCURA"></select>
+                            <!--<label class="input-label">Qual é a transação?</label>
+                            <!--<select name="" class="contactField" id="TRANSACAO"></select>
                         </fieldset>
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
@@ -47,11 +48,12 @@
 
             <!--<script src="scripts/jsmodel/moedas.js"></script>
             <script src="scripts/jsmodel/transacao.js"></script>-->
-            <script src="scripts/paginas/estabelecimento.js"></script>
+            <script src="scripts/paginas/avaliacao.js"></script>
 
         </div>
     </div>
 </body>
+
 
 </html>
 
