--- a/www/inicio.html
+++ b/www/inicio.html
@@ -118,7 +118,7 @@
                 </div>
                 <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
-                    <a onclick="CarregaMenu('avaliacoes.html')" class="close-nav nav-item">
+                    <a onclick="CarregaMenu('avaliacao.html')" class="close-nav nav-item">
                         <i class="fa fa-area-chart"></i>
                         Avaliações
                         <i class="fa"></i>
